--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "d3": "^5.5.0",
     "gsap": "^2.0.1",
     "vue": "^2.5.17"
