--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/eslint-config-standard": "^3.0.0",
     "axios": "^0.18.0",
     "d3": "^5.5.0",
     "gsap": "^2.0.1",
+    "lodash": "^4.3.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
     "@vue/cli-plugin-eslint": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
+    "@vue/eslint-config-airbnb": "^3.0.0",
     "@vue/eslint-config-prettier": "^3.0.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
